# qsp-filter

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api-overview.md  architecture.md  dependency-on-qsp-core.md  downstream-usage.md  repo-roadmap.md
examples/: normalization_demo.py  smoothing_demo.py
qsp/filter/: __init__.py  clipping.py  normalization.py  utils.py
qsp_filter/: __init__.py  smoothing.py  utils.py
tests/: test_clipping.py  test_normalization.py  test_package_api.py  test_smoothing.py
